# AjnaSpeak

./: CMakeLists.txt  README.md
include/: AjnaSpeak.h  SpeakUtility.h  UnityExporter.h  my_speak_lib.h
src/: SpeakUtility.cpp  UnityExporter.cpp  main.cpp  my_speak_lib.cpp  standalone_espeak.cpp
